rewrote section KPTI, fixed spelling, added poster

--- a/bachproef-latex-sjabloon-master/bachproef/bachproef-tin.tex
+++ b/bachproef-latex-sjabloon-master/bachproef/bachproef-tin.tex
@@ -118,9 +118,10 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 % TODO: Voeg hier eventuele andere bijlagen toe
 %\input{...}
 
+
 %%---------- Referentielijst --------------------------------------------------
 
 \printbibliography[heading=bibintoc]
 %\addcontentsline{toc}{chapter}{\textcolor{maincolor}{\IfLanguageName{dutch}{Bibliografie}{Bibliography}}}
-
+%\input{bijlage}
 \end{document}
